--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -3215,10 +3215,10 @@
     "                                          'text',\n",
     "                                          'rating_numerator',\n",
     "                                          'rating_denominator',\n",
-    "                                          'name'],var_name='dogs', value_name='dogs_period')\n",
+    "                                          'name'],var_name='dogs', value_name='dogs_breed')\n",
     "\n",
     "df_1_clean = df_1_clean.drop('dogs',1)\n",
-    "df_1_clean = df_1_clean.sort_values ('dogs_period').drop_duplicates(subset='tweet_id',keep=\"last\")"
+    "df_1_clean = df_1_clean.sort_values ('dogs_breed').drop_duplicates(subset='tweet_id',keep=\"last\")"
    ]
   },
   {
@@ -3243,7 +3243,7 @@
        "doggo        72\n",
        "puppo        24\n",
        "floofer      10\n",
-       "Name: dogs_period, dtype: int64"
+       "Name: dogs_breed, dtype: int64"
       ]
      },
      "execution_count": 44,
@@ -3252,7 +3252,7 @@
     }
    ],
    "source": [
-    "df_1_clean['dogs_period'].value_counts()"
+    "df_1_clean['dogs_breed'].value_counts()"
    ]
   },
   {
@@ -3812,7 +3812,7 @@
       " 3   rating_numerator    2082 non-null   float64\n",
       " 4   rating_denominator  2082 non-null   int64  \n",
       " 5   name                2082 non-null   object \n",
-      " 6   dogs_period         2082 non-null   object \n",
+      " 6   dogs_breed         2082 non-null   object \n",
       " 7   retweet_count       2082 non-null   int64  \n",
       " 8   favorite_count      2082 non-null   int64  \n",
       " 9   user_count          2082 non-null   int64  \n",
@@ -3852,7 +3852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_master.loc[df_master.dogs_period == \"None\", 'dogs_period'] = np.nan"
+    "df_master.loc[df_master.dogs_breed == \"None\", 'dogs_breed'] = np.nan"
    ]
   },
   {
@@ -3877,7 +3877,7 @@
        "rating_numerator         0\n",
        "rating_denominator       0\n",
        "name                     0\n",
-       "dogs_period           1750\n",
+       "dogs_breed           1750\n",
        "retweet_count            0\n",
        "favorite_count           0\n",
        "user_count               0\n",
@@ -3944,7 +3944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5-1-1 Dogs rating Based on their period :"
+    "#### 5-1-1 Dogs rating Based on their breed :"
    ]
   },
   {
@@ -3955,7 +3955,7 @@
     {
      "data": {
       "text/plain": [
-       "dogs_period\n",
+       "dogs_breed\n",
        "doggo      11.830986\n",
        "floofer    11.800000\n",
        "pupper     10.814978\n",
@@ -3969,8 +3969,8 @@
     }
    ],
    "source": [
-    "#Rating mean for each period:\n",
-    "mean = df_master.groupby('dogs_period').rating_numerator.mean()\n",
+    "#Rating mean for each breed:\n",
+    "mean = df_master.groupby('dogs_breed').rating_numerator.mean()\n",
     "mean"
    ]
   },
@@ -3995,17 +3995,17 @@
    "source": [
     "plt.subplots(figsize=(8, 5))\n",
     "plt.bar(mean.index,mean)\n",
-    "plt.title('Dogs rating Based on their period')\n",
-    "plt.xlabel('Dog Period')\n",
+    "plt.title('Dogs rating Based on their breed')\n",
+    "plt.xlabel('Dog breed')\n",
     "plt.ylabel('Average Rating');\n",
-    "plt.savefig('Dogs rating Based on their period')"
+    "plt.savefig('Dogs rating Based on their breed')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5-1-2 Dogs total interaction Based on their period :"
+    "#### 5-1-2 Dogs total interaction Based on their breed :"
    ]
   },
   {
@@ -4040,7 +4040,7 @@
        "      <th>rating_numerator</th>\n",
        "      <th>rating_denominator</th>\n",
        "      <th>name</th>\n",
-       "      <th>dogs_period</th>\n",
+       "      <th>dogs_breed</th>\n",
        "      <th>retweet_count</th>\n",
        "      <th>favorite_count</th>\n",
        "      <th>user_count</th>\n",
@@ -4071,7 +4071,7 @@
        "                                      text  rating_numerator  \\\n",
        "0  Ermergerd 12/10 https://t.co/PQni2sjPsm              12.0   \n",
        "\n",
-       "   rating_denominator  name dogs_period  retweet_count  favorite_count  \\\n",
+       "   rating_denominator  name dogs_breed  retweet_count  favorite_count  \\\n",
        "0                  10  None         NaN             79             286   \n",
        "\n",
        "   user_count  \n",
@@ -4095,7 +4095,7 @@
     {
      "data": {
       "text/plain": [
-       "dogs_period\n",
+       "dogs_breed\n",
        "doggo      22895.507042\n",
        "floofer    13845.700000\n",
        "pupper      9022.013216\n",
@@ -4109,9 +4109,9 @@
     }
    ],
    "source": [
-    "#Rating mean for each period:\n",
+    "#Rating mean for each breed:\n",
     "df_master['total_interaction'] = df_master['retweet_count']+df_master['favorite_count']\n",
-    "mean_1 = df_master.groupby('dogs_period').total_interaction.mean()\n",
+    "mean_1 = df_master.groupby('dogs_breed').total_interaction.mean()\n",
     "mean_1"
    ]
   },
@@ -4136,10 +4136,10 @@
    "source": [
     "plt.subplots(figsize=(8, 5))\n",
     "plt.bar(mean_1.index,mean_1)\n",
-    "plt.title('Dogs total interaction Based on their period')\n",
-    "plt.xlabel('Dog Period')\n",
+    "plt.title('Dogs total interaction Based on their breed')\n",
+    "plt.xlabel('Dog breed')\n",
     "plt.ylabel('Average total interactin');\n",
-    "plt.savefig('Dogs total interaction Based on their period')"
+    "plt.savefig('Dogs total interaction Based on their breed')"
    ]
   },
   {
